--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -52,41 +52,41 @@
             <div class="team">
                 <div class="empty">&nbsp;</div>
                 <div class="t1" id="al">
-                    <h3>美國聯盟</h3>
+                    <h3>&nbsp;&nbsp;美國聯盟</h3>
                     <ol>
                         <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>休士頓太空人 - &nbsp;&nbsp;90勝72敗, 美聯西區冠軍</li>
-                        <li>明尼蘇達雙城 - &nbsp;&nbsp;87勝75敗, 美聯中區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
+                        <li>休士頓太空人 - 90勝72敗, 美聯西區冠軍</li>
+                        <li>明尼蘇達雙城 - 87勝75敗, 美聯中區冠軍</li>
+                        <li>坦帕灣光芒 - 99勝63敗, 美聯外卡一</li>
+                        <li>德州遊騎兵 - 90勝72敗, 美聯外卡二</li>
+                        <li>多倫多藍鳥 - 89勝73敗, 美聯外卡三</li>
                     </ol>
                     <div class="al-team">
+                        <div class="team-img"><img src="../img/baltimore-log.svg"></div>
                         <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
+                        <div class="team-img"><img src="../img/twins-logo.svg"></div>
+                        <div class="team-img"><img src="../img/tampa-logo.svg"></div>
+                        <div class="team-img"><img src="../img/rangers.svg"></div>
+                        <div class="team-img"><img src="../img/jays.svg"></div>
                     </div>
                 </div>
                 <div class="t1" id="nl">
-                    <h3>國家聯盟</h3>
+                    <h3>&nbsp;&nbsp;國家聯盟</h3>
                     <ol>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
-                        <li>巴爾的摩金鶯 - 101勝61敗, 美聯東區冠軍</li>
+                        <li>亞特蘭大勇士 - 104勝58敗, 國聯東區冠軍</li>
+                        <li>洛杉磯道奇 - 100勝62敗, 國聯西區冠軍</li>
+                        <li>密爾瓦基釀酒人 - 92勝70敗, 國聯中區冠軍</li>
+                        <li>費城費城人 - 90勝72敗, 國聯外卡一</li>
+                        <li>邁阿密馬林魚 - 84勝78敗, 國聯外卡二</li>
+                        <li>亞利桑那響尾蛇 - 84勝78敗, 國聯外卡三</li>
                     </ol>
                     <div class="al-team">
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
-                        <div class="team-img"><img src="../img/astro.svg"></div>
+                        <div class="team-img"><img src="../img/braves-logo.svg"></div>
+                        <div class="team-img"><img src="../img/dodges-log.svg"></div>
+                        <div class="team-img"><img src="../img/brewer-logo.svg"></div>
+                        <div class="team-img"><img src="../img/phily-logo.svg"></div>
+                        <div class="team-img"><img src="../img/miami-logo.svg"></div>
+                        <div class="team-img"><img src="../img/d-backs-logo.svg"></div>
                     </div>
                 </div>
                 <div class="empty">&nbsp;</div>
@@ -465,11 +465,19 @@
                     <td style="border-width:0 0 0 0; border-style:solid;border-color:black;">&nbsp;
                     </td></tr></tbody></table>
             </div>
-
+            <br>
             <h2 class="inarticle">季後賽戰況</h2>
-            <div>
-
+            <br>
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-1">
+                    2023 MLB美國職棒大聯盟季後賽世界大賽台灣時間於10月28日開打！
+                    率先拿到門票的德州遊騎兵享有主場優勢，第1、2、6、7戰將於全球人壽球場（Globe Life Field）開打。
+                    遊騎兵對手確定！亞利桑那響尾蛇擊敗費城人晉級，兩支外卡球隊一路拚戰上來，將會師世界大賽。
+                </p>
+                <p class="space">&nbsp;</p>
             </div>
+            <div id="texvsdbacks"><img src="../img/texvsdbacks.png"></div>
         </article>
 
 
