--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -33,9 +33,11 @@
     </div>
     <!-- <br> -->
     <div class="outercontainer">
-        <br><br><br><br>
+        <!-- <br><br><br><br> -->
         <article>
-            <h1 class="inarticle">2023年美國職棒大聯盟季後賽</h1>
+            <div class="top-bg"><img src="../img/2023pos.png"></div>
+            <br><br>
+            <h1 class="inarticle" style="font-size: 2.5em;">2023年美國職棒大聯盟季後賽</h1>
             <br><br>
             <h2 class="inarticle">賽制與簡介</h2>
             <div class="content inarticle">
@@ -43,7 +45,7 @@
                 <p id="content">
                     大聯盟今年沿用去年球季設立的新制度，每個聯盟取三支外卡球隊，兩個聯盟戰績最佳的兩支分區冠軍直接保送到聯盟分區賽，戰績最差的分區冠軍與三支外卡球隊進行三戰兩勝的外卡系列賽，勝隊和前二種子進行分區賽，接著進行聯盟冠軍賽，勝者再於世界大賽上對決。
                     <br>金鶯隊與遊騎兵隊睽違7年再次晉級季後賽。勇士隊連續6年晉級季後賽，道奇隊連續11年晉級季後賽，釀酒人和響尾蛇隊睽違5年再次晉級季後賽。
-                    該年季後賽於10月3日開始，11月1日結束。遊騎兵隊最終在世界大賽以4勝1敗打敗響尾蛇隊，拿下隊史第1冠。
+                    季後賽於10月3日開始，11月1日結束。遊騎兵隊最終在世界大賽以4勝1敗打敗響尾蛇隊，拿下隊史第1冠。
                 </p>
                 <p class="space">&nbsp;</p>
             </div>
@@ -471,6 +473,51 @@
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
                 <p id="content-1">
+                    2023 MLB（Major League Baseball）美國職棒大聯盟季後賽分區冠軍賽台灣時間10月16日開打！
+                    美國聯盟部分上演德州內戰，由休士頓太空人迎戰德州遊騎兵；國聯則由費城費城人交手亞利桑那響尾蛇。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div id="alnlcs"><img src="../img/alcsnlcs.jpeg"></div>
+
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-3">
+                    美聯分區冠軍賽最後一戰，此役遊騎兵展現出強大進攻火力，靠著Adolis García繳出5支4猛打賞，
+                    其中包含雙響砲包辦球隊5分打點，加上Corey Seager、Nathaniel Lowe也都有開轟紀錄，
+                    讓比賽在6局時幾乎定調，終場遊騎兵也毫無懸念以11比4轟垮太空人，睽違12年再殺進世界大賽。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div id="adog7">
+                <iframe width="850" height="400" 
+            src="https://www.youtube.com/embed/JBgIJOIkxY0?si=t4bQNP2MVr6AWhsc?mute=1" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-4">
+                    國聯分區冠軍賽第七戰，前4局費城人雖靠著Alec Bohm陽春砲及Bryson Stott長打取得1分領先，
+                    但響尾蛇在Corbin Carroll的安打、盜壘、高飛犧牲打帶動之下，在7局上時反倒取得2分領先，
+                    加上後續5位牛棚投手輪番壓制，終場響尾蛇就以4比2咬傷費城人，繼2001年後再次進入世界大賽。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div id="nlcsg7">
+                <iframe width="850" height="400" 
+            src="https://www.youtube.com/embed/POb3QIVq0AU?si=VJRAjPY21meyz7Zg?mute=1" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-2">
                     2023 MLB美國職棒大聯盟季後賽世界大賽台灣時間於10月28日開打！
                     率先拿到門票的德州遊騎兵享有主場優勢，第1、2、6、7戰將於全球人壽球場（Globe Life Field）開打。
                     遊騎兵對手確定！亞利桑那響尾蛇擊敗費城人晉級，兩支外卡球隊一路拚戰上來，將會師世界大賽。
@@ -478,8 +525,26 @@
                 <p class="space">&nbsp;</p>
             </div>
             <div id="texvsdbacks"><img src="../img/texvsdbacks.png"></div>
-        </article>
 
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-5">
+                    遊騎兵在世界大賽第5戰完封響尾蛇，勇奪隊史首座世界大賽冠軍，也成為史上最低種子序封王的球隊。
+                    遊騎兵例行賽僅90勝、在過去冠軍得主中名列史上第6低，今年以外卡第2位、也就是第5種子之姿晉級季後賽，
+                    成為自2012年季後賽擴編後、種子序最低的冠軍。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div id="champion">
+                <iframe width="850" height="400" 
+                src="https://www.youtube.com/embed/U7HCCY4AiDw?si=v_4_0-7z91zmRurb?mute=1" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+
+            <br><br>
+        </article>
+        <div class="bot-bg"><img src="../img/mlbad.png"></div>
 
     </div>
 </body>
