11/13 post-season finish

--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
   </div>
 
   <div id="bracket">
-    <h1>2023MLB季後賽分組</h1>
+    <h1>2023MLB季後賽</h1>
     <img src="./img/bracket.jpeg">
   </div>
   <br><br>
