--- a/game/game.html
+++ b/game/game.html
@@ -31,8 +31,8 @@
   </div>
   <!-- <br> -->
   <div class="outercontainer">
-    <br><br>
-
+    <div class="top-bg"><img src="../img/player.webp"></div>
+    <br><br><br>
     <div class="box-container">
       <div class="vstitle">
         <div class="item item1"><span>世界大賽G1</span></div>
