--- a/game/game.html
+++ b/game/game.html
@@ -25,7 +25,7 @@
       <a href="./game.html">比賽結果</a>
       <a href="../post-season/post-season.html">季後賽</a>
       <!-- <a href="#keyMen">關鍵角色</a> -->
-      <a href="#rangers">關於Rangers</a>
+      <a href="../about.html">關於Rangers</a>
       <a id="logocom" href="../main.html"><img src="../img/Rangers_dot_com.svg" alt=""></a>
     </div>
   </div>
