--- a/about.html
+++ b/about.html
@@ -34,13 +34,12 @@
     <!-- <br> -->
     <div class="outercontainer">
         <div class="bot-bg"><img src="./img/mlbad.png"></div>
-        <br><br><br><br>
-        <div class="top-bg"><img src="./img/rex-world-champ.jpeg"></div>
+        <div class="top-bg"><img src="./img/about-bg.webp"></div>
         <!-- <br><br><br><br> -->
         <article>
-            <br><br>
+            <br>
             <h1 class="inarticle" style="font-size: 2.5em;">德州遊騎兵</h1>
-            <br><br>
+            <br>
             <h2 class="title-article">簡介</h2>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
