--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
     <div>
         <div class="topnav" id="myTopnav">
-            <a id="texlogo" href="../main.html"><img src="../img/tlogo.svg" alt=""></a>
+            <a id="texlogo" href="../main.html"><img src="./img/tlogo.svg" alt=""></a>
             <a href="./main.html">首頁</a>
             <a href="./player.html">球員</a>
             <a href="./game/game.html">比賽結果</a>
@@ -56,6 +56,57 @@
                     則都未能打進世界大賽，2023年表現煥然一新，贏得隊史首座世界大賽冠軍。
                 </p>
                 <p class="space">&nbsp;</p>
+            </div>
+
+            <div class="logo-uni">
+                <div class="margin-logo-uni">
+                    <h2>標誌與帽徽</h2>
+                    <div class="logo">
+                        <div><img src="./img/about-logo.png"></div>
+                        <div><img src="./img/hat-logo.png"></div>
+                     </div>
+                </div>
+                <div>
+                    <h2>制服</h2>
+                    <div class="uniform">
+                        <div><img src="./img/uniform.png"></div>
+                     </div>
+                </div>  
+            </div>
+
+            <div class="champ-name">
+                <div class="name-field">
+                    <div class="name">
+                        <p style="font-size: 1.2em; font-weight: 700;">隊名：</p>
+                        <p>
+                            德州遊騎兵（1972年－至今）
+                            <br>
+                            華盛頓參議員 （1961年－1971年）
+                        </p>
+                    </div>
+                    <div class="field">
+                        <p style="font-size: 1.2em; font-weight: 700;">球場：</p>
+                        <p>
+                            全球人壽球場 （2020年－至今）<br>
+                            阿靈頓棒球場（1994年–2019年）<br>
+                            阿靈頓體育場 （1972年－1993年）<br>
+                            RFK體育場 （華盛頓特區 ） （1962年－1971年）
+                        </p>
+                    </div>
+                    <div class="champ">
+                        <p style="font-size: 1.2em; font-weight: 700;">冠軍：</p>
+                        <p>
+                            世界大賽冠軍: 2023 <br>
+                            美國聯盟冠軍: 2023 · 2011 · 2010 <br>
+                            西區冠軍: 2016 · 2015 · 2011 · 2010 · 1999 · 1998 · 1996 <br>
+                            外卡:2012 · 2023
+                        </p>
+                    </div>
+                </div>
+                <div class="field-img">
+                    <div><img src="./img/globe-field.jpeg"></div>
+                    <div><img src="./img/field-in.jpeg"></div>
+                </div>
             </div>
             
         </article>
