--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
                 <p id="content">
-                    德州遊騎兵（英語：Texas Rangers）是美國職棒大聯盟中，隸屬於美國聯盟的棒球隊伍之一。
+                    德州遊騎兵（Texas Rangers）是美國職棒大聯盟中，隸屬於美國聯盟的棒球隊伍之一。
                     主場為全球人壽球場，位於德克薩斯州的阿靈頓。從1994年開始，在美國聯盟的分區中，屬於美國聯盟西區。<br><br>
                     1961年，當華盛頓參議員遷隊至明尼蘇達成為現今的明尼蘇達雙城以後，
                     大聯盟給華盛頓特區1支以參議員為名的職業棒球隊的經營權，主場位置在華盛頓哥倫比亞特區。1971年，
@@ -64,14 +64,14 @@
                     <div class="logo">
                         <div><img src="./img/about-logo.png"></div>
                         <div><img src="./img/hat-logo.png"></div>
-                     </div>
+                    </div>
                 </div>
                 <div>
                     <h2>制服</h2>
                     <div class="uniform">
                         <div><img src="./img/uniform.png"></div>
-                     </div>
-                </div>  
+                    </div>
+                </div>
             </div>
 
             <div class="champ-name">
@@ -108,7 +108,60 @@
                     <div><img src="./img/field-in.jpeg"></div>
                 </div>
             </div>
-            
+
+            <br>
+            <h2 class="title-article">歷史</h2>
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-1">
+                    <span style="font-size: 1.2em; font-weight: 700; font-style: italic;">2010年：隊史的首個美聯冠軍</span><br><br>
+                    在4月球季開始，遊騎兵團隊有高達0.500的打擊率，在6月的戰績是優異的21勝6敗。<br>
+                    在球季中的交易和補強幫助遊騎兵在9月25日贏得美國聯盟西區冠軍，至從1999年以後再次進入季後賽。<br>
+                    在2010年美國聯盟分區賽遊騎兵的對手為坦帕灣光芒，最後是以3勝2敗淘汰光芒，也是隊史50年來第1次贏得季後賽系列賽。<br>
+                    在2010年美國聯盟冠軍賽的對手為紐約洋基，最後在6場比賽中，遊騎兵以4勝2敗獲得美國聯盟冠軍，
+                    這也是隊史成軍以來的第1座冠軍，並且第1次進入世界大賽，Josh Hamilton獲得美國聯盟MVP。<br>
+                    遊騎兵2010年世界大賽的對手為舊金山巨人，但在世界大賽只獲得1勝，最後輸掉比賽而無緣拿下隊史第1個世界大賽冠軍。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-2">
+                    <span style="font-size: 1.2em; font-weight: 700; font-style: italic;">2011年：一顆好球的距離</span><br><br>
+                    遊騎兵挾持著去年獲得美國聯盟冠軍並打進世界大賽的氣勢，在這一年也以96勝66敗的成績連續兩年獲得美聯西區冠軍。
+                    在美聯分區賽遊騎兵的對手為在球季最後一天比賽獲得外卡資格的坦帕灣光芒，這也是遊騎兵連續兩年在季後賽第一輪遇到同樣的對手。
+                    在第1場比賽中遊騎兵意外的被光芒擊敗，不過接下來遊騎兵連續贏得3場比賽，將光芒給淘汰並順利晉級美聯冠軍賽。<br>
+
+                    美聯冠軍賽的對手是底特律老虎，10月15日第6場的比賽中，遊騎兵以大比數15：5擊敗老虎，連續兩年順利獲得美聯冠軍並晉級世界大賽。<br>
+
+                    遊騎兵在世界大賽的對手是演出外卡大驚奇的聖路易紅雀，這個系列賽遊騎兵最關鍵的是在第6場比賽，這之前遊騎兵已取得3勝2敗的聽牌優勢，
+                    再一勝即可奪得世界大賽冠軍，但是在第六場9局上遊騎兵以7：5領先紅雀時，在2出局及2好球的情況下，與隊史第一個世界大賽冠軍只差1個好球，
+                    但卻被David Freese擊出2分打點三壘安打追平比數，11局下半David Freese打出一支中外野的再見轟將戰線延長到第七戰，
+                    第七戰除了第一局的兩分外接下來完全熄火以2:6敗北，於隊史首冠擦身而過。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
+            <div class="content inarticle">
+                <p class="space">&nbsp;</p>
+                <p id="content-3">
+                    <span style="font-size: 1.2em; font-weight: 700; font-style: italic;">
+                        2023年：外卡傳奇，獲得隊史首個世界大賽冠軍：等待12年一個好球終於到手</span><br><br>
+
+                    冠軍教頭Bruce Bochy決定復出執教，以三年合約在2023年被德州遊騎兵隊聘為新任總教練。<br>
+
+                    由於本季戰績跟休士頓太空人相同，外加本季跟休士頓太空人對戰成績敗場居多，遊騎兵沒能拿下美聯西區龍頭，最後以美聯外卡第二，驚險晉級季後外卡賽。<br>
+                    對決坦帕灣光芒，以2連勝橫掃對手；晉級美聯分區系列賽，對決美聯東區冠軍巴爾的摩金鶯，再以3連勝橫掃對手；
+                    晉級睽違12年的美聯冠軍戰，將與衛冕軍休士頓太空人，上演首次德州內戰。<br>
+                    前六戰戰成3勝3敗平手局面，兩隊將進入決一死戰的「搶七大戰」，最後遊騎兵11比4打爆衛冕軍太空人，暌違12年重返世界大賽，同時也創下季後賽史上第二次
+                    ，聯盟冠軍賽史上第一次七戰四勝制兩隊打滿七場且全數都在客場贏球的紀錄。<br>
+                    世界大賽的對手同樣也是以外卡進入的國聯冠軍亞利桑那響尾蛇，最終系列賽以4勝1敗勝出，奪下1961年建隊以來首座世界大賽冠軍，其中季後賽客場11連勝更是大聯盟新紀錄，
+                    最終由遊騎兵看板球星Corey Seager獲得世界大賽最有價值球員。
+                </p>
+                <p class="space">&nbsp;</p>
+            </div>
+
         </article>
 
     </div>
