--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                 <p class="space">&nbsp;</p>
             </div>
 
-            <div class="content inarticle">
+            <div class="content inarticle blue-bg">
                 <p class="space">&nbsp;</p>
                 <p id="content-3">
                     <span style="font-size: 1.2em; font-weight: 700; font-style: italic;">
@@ -161,8 +161,8 @@
                 </p>
                 <p class="space">&nbsp;</p>
             </div>
-
+            <br>
         </article>
-
+        <div class="bot-bg"><img src="./img/mlbad.png"></div>
     </div>
 </body>
