--- a/player.html
+++ b/player.html
@@ -47,63 +47,63 @@
         <div id="tabs-1">
           <div class="grid-container">
             <div class="grid-item">
-                <a href="#">
+                <a href="./player/pitcher.html#eovaldi" target="_blank">
                 <div><img src="./img/eovaldi.jpeg"></div>
                 <div><span>SP #17</span></div>
                 <div><span>Nathan Eovaldi</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="#">
+                <a href="./player/pitcher.html#scherzer" target="_blank">
                 <div><img src="./img/max.jpeg"></div>
                 <div><span>SP #31</span></div>
                 <div><span>Max Scherzer</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#monty" target="_blank">
                 <div><img src="./img/p-montgo.jpeg"></div>
                 <div><span>SP #52</span></div>
                 <div><span>Jordan Montgomery</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#heaney" target="_blank">
                 <div><img src="./img/heaney.jpeg"></div>
                 <div><span>SP #44</span></div>
                 <div><span>Andrew Heaney</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#bradford" target="_blank">
                 <div><img src="./img/cody.jpeg"></div>
                 <div><span>SP #61</span></div>
                 <div><span>Cody Bradford</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#dunning" target="_blank">
                 <div><img src="./img/dane.jpeg"></div>
                 <div><span>SP #33</span></div>
                 <div><span>Dane Dunning</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#jon" target="_blank">
                 <div><img src="./img/jon.jpeg"></div>
                 <div><span>SP #22</span></div>
                 <div><span>Jon Gray</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#martin" target="_blank">
                 <div><img src="./img/perez.jpeg"></div>
                 <div><span>SP #54</span></div>
                 <div><span>Martín Pérez</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#sborz" target="_blank">
                 <div><img src="./img/sborz.jpeg"></div>
                 <div><span>RP #66</span></div>
                 <div><span>Josh Sborz</span></div>
