--- a/player/pitcher.html
+++ b/player/pitcher.html
@@ -573,6 +573,367 @@
       </div>
     </div>
 
+    <div class="infield">
+      <div id="jon">
+        <div>
+          <div class="p-name">
+            <p>Jon Gray #22</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 右投右打 | 225公分 | 32歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <li><span class="liTitle">綽號: </span><span class="liContent">Wolf</span></li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1991.11.05, Shawnee, OK</span></li>
+            <li><span class="liTitle">選秀: </span><span class="liContent">2013年第1輪3順位, Colorado Rockies</span></li>
+            <li><span class="liTitle">大學: </span><span class="liContent"> Oklahoma</span></li>
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2015.8.04</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr> 
+              <td>2023季後賽</td>
+              <td>1</td>
+              <td>0</td>
+              <td>1.59</td>
+              <td>3</td>
+              <td>0</td>
+              <td>0</td>
+              <td>5.2</td>
+              <td>8</td>
+              <td>0.88</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>1</td>
+              <td>1</td>
+              <td>6.43</td>
+              <td>4</td>
+              <td>1</td>
+              <td>0</td>
+              <td>7.0</td>
+              <td>10</td>
+              <td>1.71</td>
+            </tr>
+            <tr> 
+              <td>2023例行賽</td>
+              <td>9</td>
+              <td>8</td>
+              <td>4.12</td>
+              <td>29</td>
+              <td>29</td>
+              <td>0</td>
+              <td>157.1</td>
+              <td>142</td>
+              <td>1.29</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>69</td>
+              <td>64</td>
+              <td>4.45</td>
+              <td>205</td>
+              <td>204</td>
+              <td>0</td>
+              <td>1114.0</td>
+              <td>1125</td>
+              <td>1.31</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="infield">
+      <div id="martin">
+        <div>
+          <div class="p-name">
+            <p>Martín Pérez #54</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 左投左打 | 200公分 | 32歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <li><span class="liTitle">綽號: </span><span class="liContent">El De Las Matas</span></li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1991.4.04, Guanare, Venezuela</span></li>
+            <!-- <li><span class="liTitle">選秀: </span><span class="liContent">2013年第1輪3順位, Colorado Rockies</span></li> -->
+            <!-- <li><span class="liTitle">大學: </span><span class="liContent"> Oklahoma</span></li> -->
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2012.6.27</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr> 
+              <td>2023季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>9.64</td>
+              <td>3</td>
+              <td>0</td>
+              <td>0</td>
+              <td>4.2</td>
+              <td>2</td>
+              <td>2.57</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>0</td>
+              <td>1</td>
+              <td>9.24</td>
+              <td>8</td>
+              <td>1</td>
+              <td>0</td>
+              <td>12.2</td>
+              <td>4</td>
+              <td>2.45</td>
+            </tr>
+            <tr>  
+              <td>2023例行賽</td>
+              <td>10</td>
+              <td>4</td>
+              <td>4.45</td>
+              <td>35</td>
+              <td>20</td>
+              <td>0</td>
+              <td>141.2</td>
+              <td>93</td>
+              <td>1.40</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>85</td>
+              <td>81</td>
+              <td>4.44</td>
+              <td>288</td>
+              <td>243</td>
+              <td>0</td>
+              <td>1440.2</td>
+              <td>1002</td>
+              <td>1.44</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="infield">
+      <div id="sborz">
+        <div>
+          <div class="p-name">
+            <p>Josh Sborz #66</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 右投右打 | 215公分 | 29歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <!-- <li><span class="liTitle">綽號: </span><span class="liContent">El De Las Matas</span></li> -->
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1993.12.17, Washington, DC</span></li>
+            <li><span class="liTitle">選秀: </span><span class="liContent">2015年第CB-B輪74順位, Los Angeles Dodgers</span></li>
+            <li><span class="liTitle">大學: </span><span class="liContent">Virginia</span></li>
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2019.6.20</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr> 
+              <td>2023季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.75</td>
+              <td>10</td>
+              <td>0</td>
+              <td>1</td>
+              <td>12.0</td>
+              <td>13</td>
+              <td>0.67</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.75</td>
+              <td>10</td>
+              <td>0</td>
+              <td>1</td>
+              <td>12.0</td>
+              <td>13</td>
+              <td>0.67</td>
+            </tr>
+            <tr>  
+              <td>2023例行賽</td>
+              <td>6</td>
+              <td>7</td>
+              <td>5.50</td>
+              <td>44</td>
+              <td>0</td>
+              <td>0</td>
+              <td>52.1</td>
+              <td>66</td>
+              <td>1.15</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>11</td>
+              <td>11</td>
+              <td>5.08</td>
+              <td>137</td>
+              <td>1</td>
+              <td>1</td>
+              <td>147.0</td>
+              <td>176</td>
+              <td>1.34</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="infield">
+      <div id="chapman">
+        <div>
+          <div class="p-name">
+            <p>Aroldis Chapman #45</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 左投左打 | 193公分 | 35歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <!-- <li><span class="liTitle">綽號: </span><span class="liContent">El De Las Matas</span></li> -->
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1993.12.17, Washington, DC</span></li>
+            <li><span class="liTitle">選秀: </span><span class="liContent">2015年第CB-B輪74順位, Los Angeles Dodgers</span></li>
+            <li><span class="liTitle">大學: </span><span class="liContent">Virginia</span></li>
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2019.6.20</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr> 
+              <td>2023季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.75</td>
+              <td>10</td>
+              <td>0</td>
+              <td>1</td>
+              <td>12.0</td>
+              <td>13</td>
+              <td>0.67</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.75</td>
+              <td>10</td>
+              <td>0</td>
+              <td>1</td>
+              <td>12.0</td>
+              <td>13</td>
+              <td>0.67</td>
+            </tr>
+            <tr>  
+              <td>2023例行賽</td>
+              <td>6</td>
+              <td>7</td>
+              <td>5.50</td>
+              <td>44</td>
+              <td>0</td>
+              <td>0</td>
+              <td>52.1</td>
+              <td>66</td>
+              <td>1.15</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>11</td>
+              <td>11</td>
+              <td>5.08</td>
+              <td>137</td>
+              <td>1</td>
+              <td>1</td>
+              <td>147.0</td>
+              <td>176</td>
+              <td>1.34</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
 
 
     <div class="top-bg"><img src="../img/mlbad.png"></div>
